# synthfin

./: .gitignore  LICENSE  README.md  pyproject.toml
src/synthfin/: __init__.py  cli.py  config.yaml  correlation.py  generator.py  main.py  models.py  output.py  synthetic_prices.csv  utils.py  visualization.py
tests/: test_correlation.py  test_generator.py  test_models.py
